--- a/docs/api.pod
+++ b/docs/api.pod
@@ -19,10 +19,6 @@ Authorization with JWT
 
 =head3 登录
 
-B<描述>
-
-登录授权，获取 token
-
 B<请求方法>
 
 POST
@@ -53,10 +49,6 @@ B<响应示例>
     }
 
 =head3 退出
-
-B<描述>
-
-用户退出，token 加入黑名单
 
 B<请求方法>
 
@@ -114,15 +106,419 @@ B<响应示例>
 
 =head2 User
 
+=head3 用户列表
+
+B<请求方法>
+
+GET
+
+B<请求 URL>
+
+C</users>
+
+B<请求参数>
+
+无
+
+B<响应参数>
+
+    NAME            DESCRIPtion
+    -------------   ---------------------
+
+B<响应示例>
+
+
+=head3 添加用户
+
+B<请求方法>
+
+POST
+
+B<请求 URL>
+
+C</user>
+
+B<请求参数>
+
+    NAME            NULL        TYPE          DESCRIPTION
+    -------------   ---------   -----------   --------------------
+    name
+    pass
+
+B<响应参数>
+
+    NAME            DESCRIPtion
+    -------------   ---------------------
+
+B<响应示例>
+
+
+=head3 用户详情
+
+B<请求方法>
+
+GET
+
+B<请求 URL>
+
+C</user/:id>
+
+B<请求参数>
+
+    NAME            NULL        TYPE          DESCRIPTION
+    -------------   ---------   -----------   --------------------
+    id              NOT NULL
+
+B<响应参数>
+
+    NAME            DESCRIPtion
+    -------------   ---------------------
+
+B<响应示例>
+
+
+
+=head3 编辑用户
+
+B<请求方法>
+
+PUT
+
+B<请求 URL>
+
+C</user/:id>
+
+B<请求参数>
+
+    NAME            NULL        TYPE          DESCRIPTION
+    -------------   ---------   -----------   --------------------
+    id              NOT NULL    string
+    name            NULL        string
+    pass            NULL        string
+
+B<响应参数>
+
+    NAME            DESCRIPtion
+    -------------   ---------------------
+
+B<响应示例>
+
+
+=head3 删除用户
+
+B<请求方法>
+
+DELETE
+
+B<请求 URL>
+
+C</user/:id>
+
+B<请求参数>
+
+    NAME            NULL        TYPE          DESCRIPTION
+    -------------   ---------   -----------   --------------------
+    id              NOT NULL    string
+
+B<响应示例>
+
+
 
 =head2 Category
+
+=head3 分类列表
+
+B<请求方法>
+
+GET
+
+B<请求 URL>
+
+C</cates>
+
+B<请求参数>
+
+    NAME            NULL        TYPE          DESCRIPTION
+    -------------   ---------   -----------   --------------------
+
+B<响应参数>
+
+    NAME            DESCRIPtion
+    -------------   ---------------------
+    _id
+    title
+    pid
+    order
+
+B<响应示例>
+
+
+=head3 添加分类
+
+B<请求方法>
+
+POST
+
+B<请求 URL>
+
+C</cate>
+
+B<请求参数>
+
+    NAME            NULL        TYPE          DESCRIPTION
+    -------------   ---------   -----------   --------------------
+    pid
+    title
+
+B<响应参数>
+
+    NAME            DESCRIPtion
+    -------------   ---------------------
+    _id
+    title
+    pid
+
+B<响应示例>
+
+
+
+=head3 编辑分类
+
+B<请求方法>
+
+PUT
+
+B<请求 URL>
+
+C</cate/:id>
+
+B<请求参数>
+
+    NAME            NULL        TYPE          DESCRIPTION
+    -------------   ---------   -----------   --------------------
+    pid
+    title
+
+B<响应参数>
+
+    NAME            DESCRIPtion
+    -------------   ---------------------
+
+B<响应示例>
+
+
+
+=head3 分类排序
+
+B<请求方法>
+
+POST
+
+B<请求 URL>
+
+C</cates/sort>
+
+B<请求参数>
+
+    NAME            NULL        TYPE          DESCRIPTION
+    -------------   ---------   -----------   --------------------
+    ids
+
+B<响应参数>
+
+    NAME            DESCRIPtion
+    -------------   ---------------------
+
+B<响应示例>
+
+
+
+=head3 删除分类
+
+B<请求方法>
+
+DELETE
+
+B<请求 URL>
+
+C</cate/:id>
+
+B<请求参数>
+
+    NAME            NULL        TYPE          DESCRIPTION
+    -------------   ---------   -----------   --------------------
+    id
+
+B<响应参数>
+
+    NAME            DESCRIPtion
+    -------------   ---------------------
+
+B<响应示例>
 
 
 
 =head2 Project
 
+=head3 Project 列表
+
+B<请求方法>
+
+GET
+
+B<请求 URL>
+
+C</projects>
+
+B<请求参数>
+
+    NAME            NULL        TYPE          DESCRIPTION
+    -------------   ---------   -----------   --------------------
+
+B<响应参数>
+
+    NAME            DESCRIPtion
+    -------------   ---------------------
+
+B<响应示例>
+
+
+
+=head3 添加 Project
+
+B<请求方法>
+
+POST
+
+B<请求 URL>
+
+C</project>
+
+B<请求参数>
+
+    NAME            NULL        TYPE          DESCRIPTION
+    -------------   ---------   -----------   --------------------
+    title
+    slug
+    fields
+    description
+    created_at
+    updated_at
+    deleted_at
+
+B<响应参数>
+
+    NAME            DESCRIPtion
+    -------------   ---------------------
+
+B<响应示例>
+
+
+
+=head3 Project 详情
+
+B<请求方法>
+
+GET
+
+B<请求 URL>
+
+C</project/:id>
+
+B<请求参数>
+
+    NAME            NULL        TYPE          DESCRIPTION
+    -------------   ---------   -----------   --------------------
+    id
+
+B<响应参数>
+
+    NAME            DESCRIPtion
+    -------------   ---------------------
+
+B<响应示例>
+
+
+
+=head3 编辑 Project
+
+B<请求方法>
+
+PUT
+
+B<请求 URL>
+
+C</project/:id>
+
+B<请求参数>
+
+    NAME            NULL        TYPE          DESCRIPTION
+    -------------   ---------   -----------   --------------------
+    id
+    title
+    slug
+    description
+
+B<响应参数>
+
+    NAME            DESCRIPtion
+    -------------   ---------------------
+
+B<响应示例>
+
+
+
+=head3 删除 Project
+
+B<请求方法>
+
+DELETE
+
+B<请求 URL>
+
+C</project/:id>
+
+B<请求参数>
+
+    NAME            NULL        TYPE          DESCRIPTION
+    -------------   ---------   -----------   --------------------
+    id
+
+B<响应参数>
+
+    NAME            DESCRIPtion
+    -------------   ---------------------
+
+B<响应示例>
+
+
+=head3 Project 基本信息列表
+
+B<请求方法>
+
+GET
+
+B<请求 URL>
+
+C</project/list>
+
+B<请求参数>
+
+无
+
+B<响应参数>
+
+    NAME            DESCRIPtion
+    -------------   ---------------------
+
+B<响应示例>
+
+
+
 
 =head2 Node
+
+
 
 
 
@@ -131,7 +527,33 @@ B<响应示例>
 
 
 
+
 =head2 Log
+
+=head3 接口标题
+
+B<请求方法>
+
+GET
+
+B<请求 URL>
+
+C</URL>
+
+B<请求参数>
+
+    NAME            NULL        TYPE          DESCRIPTION
+    -------------   ---------   -----------   --------------------
+
+B<响应参数>
+
+    NAME            DESCRIPtion
+    -------------   ---------------------
+
+B<响应示例>
+
+
+
 
 
 =cut
